Fixed spacing between exercises count and exercises list in Partial

--- a/EzyShape/wwwroot/css/Client/workoutModal.css
+++ b/EzyShape/wwwroot/css/Client/workoutModal.css
@@ -79,7 +79,6 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .exercises-count-div {
